# pytemplate

./: README.md  bootstrap.sh  mypy.ini  pyproject.toml  tasks.py
scripts/: init.sh  init_project.py
src/: __init__.py  main.py
src/internal/: __init__.py  utils.py
tests/: test_main.py
